--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -105,7 +105,7 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-ss-12 padbot30">
                         <h4>Contacts</h4>
                         <div class="foot_address">Cocody-Angré, Abidjan | Côte d'Ivoire</div>
-                        <div class="foot_phone"><a href="tel:1 800 888 2828" >+225 07 83 33 75</a></div>
+                        <div class="foot_phone"><a href="tel:0022575833375" >00225 75 83 33 75</a></div>
                         <div class="foot_mail"><a href="mailto:info@glamyshop.com" >info@visitezmoi.ci</a></div>
 
                         <div class="social">
