--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -77,28 +77,7 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-1 col-md-1 col-sm-3 col-xs-6 col-ss-12 padbot30">
-                        <h4>Catégorie</h4>
-                        <ul class="foot_menu">
-                            <li><a href="{{ path('maquette_page') }}" >Santé</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Education</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Galerie</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Organisme</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Immobilier</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Commerce</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-1 col-md-1 col-sm-3 col-xs-6 col-ss-12 padbot30">
-                        <h4>Catégorie</h4>
-                        <ul class="foot_menu">
-                            <li><a href="{{ path('maquette_page') }}" >Loisirs</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Mode</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Tourisme</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Showrooms</a></li>
-                            <li><a href="{{ path('maquette_page') }}" >Restauration</a></li>
-                        </ul>
-                    </div>
+                    {{ render(url("menu_categorie_footer")) }}
 
                     <div class="respond_clear_480"></div>
 
