--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,16 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link href="{{ absolute_url(asset('css/font-awesome.min.css')) }}" rel="stylesheet">
     <link rel="stylesheet" href="{{ absolute_url(asset('icofont/icofont.min.css')) }}">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104978409-12"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-104978409-12');
+    </script>
+
     {% block slider %}{% endblock %}
     {% block mode %}{% endblock %}
 </head>
